--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background: pink;
+    background: #b0c4de;
     font-family:Arial, Helvetica, sans-serif ;
 }
 
@@ -7,16 +7,30 @@ body {
     display: flex;
     padding: 10px;
     margin: 10px;
-    background:lightgrey;
+    background:#ffffe0;
+    border-radius: 10px;
 }
 
 .assignment img {
-    padding: 10px;
     width: 200px;
+    margin: 10px;
+    border: 4px solid #20b2aa;
+}
+
+.assignment img:hover {
+    border:4px solid darkorchid
 }
 
 h1{
     color:darkorchid;
     text-align:center;
 }
-/*
+
+a{
+    text-decoration:none;
+    color:#20b2aa;
+}
+
+a:hover{
+    color: darkorchid;
+}
