--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,8 @@ body {
     width: 200px;
     margin: 10px;
     border: 4px solid #20b2aa;
+    display: block;
+    margin: auto;
 }
 
 .assignment img:hover {
