Adding assignments 3,4,5 for 242

--- a/styles.css
+++ b/styles.css
@@ -1,35 +1,66 @@
+/* Structure */
+
 body {
     background-color:#2F6690;
-    font-family: Arial, Helvetica, sans-serif;
 }
 
-h1{
-    color: #3a7ca5;
-}
-
-h2{
-    color: #2F6690;
+h1, h2 {
+    color: #66a8d1;
+    text-align: center;
 }
 
 p{
+    color: black;
+}
+
+
+/* Main*/
+
+a {
+    text-decoration: none;
+    background: #66a8d1;
     color: #16425B;
+    padding: 5px;
+    border-radius: 5px;
 }
 
-a{
-text-decoration: none;
-background-color: #81C3D7;
-color: black;
-padding: 3px;
-border-radius: 2px;
+main {
+    display: flex;
+    justify-content: center;
+    margin: 20px;
 }
 
-#name{
-    font-style: italic;
+.content {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    justify-content: space-around;
 }
 
-#div{
-    background-color:#D9DCD6;
-    width: 75%;
-    margin:auto;
-    padding:5px;
+.column {
+    flex: 1; 
+    background-color: #8a9ca0;
+    padding: 20px;
+    text-align: center;
+}
+
+a:hover {
+    color: whitesmoke;
+}
+
+a img:hover{
+    opacity: 70%;
+}
+
+/*Typography*/
+body{
+font-family: Arial, Helvetica, sans-serif;
+}
+
+/*Bigger resolution*/
+@media (max-width: 1000px) {
+    .content {
+        flex-direction: column; 
+        align-items: center;
+    }
 }
