--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@ main {
 .content {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     gap: 20px;
     justify-content: space-around;
 }
