added active button to show what exercise

--- a/assignments/assignment7/styles.css
+++ b/assignments/assignment7/styles.css
@@ -34,9 +34,8 @@ h2,h3{
     text-align: center;
 }
 
-#button-exercise-one:hover,
-#button-exercise-two:hover {
-    text-decoration: underline;
+.active-button {
+    text-decoration: underline red;
 }
 
 /* Form */
