--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
 }
 
 h1, h2 {
-    color: #66a8d1;
+    color: rgb(0, 153, 255);
     text-align: center;
 }
 
@@ -18,7 +18,7 @@ p{
 
 a {
     text-decoration: none;
-    background: #66a8d1;
+    background: rgb(0, 153, 255);
     color: #16425B;
     padding: 5px;
     border-radius: 5px;
