--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,7 @@ main {
     background-color: #8a9ca0;
     padding: 20px;
     text-align: center;
+    width: 90%;
 }
 
 a:hover {
@@ -63,5 +64,6 @@ font-family: Arial, Helvetica, sans-serif;
     .content {
         flex-direction: column; 
         align-items: center;
+        width: 100%;
     }
 }
