--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,19 @@ body {
 h1, h2 {
     color: rgb(0, 153, 255);
     text-align: center;
+    font-size: xx-large;
 }
 
 p{
     color: black;
 }
+
+ .title-project {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+ }
 
 
 /* Main*/
@@ -30,7 +38,7 @@ main {
     margin: 20px;
 }
 
-.content {
+.assignments, .projects {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
