--- a/projects/part2/login.css
+++ b/projects/part2/login.css
@@ -3,15 +3,21 @@
 body {
     background-color: white;
     overflow-x: hidden;
+    color: maroon;
 }
 
 header #main-title {
     text-align: center;
-    font-size: 42px; /* Use !important to ensure the font size is applied */
+    font-size: 42px; 
+    color: black;
 }
 
 .columns {
     display: flex;
+}
+
+p{
+    color: maroon;
 }
 
 /* Navigation */
@@ -21,17 +27,17 @@ header #main-title {
 #button-my-tickets,
 #button-game-ratings,
 #button-log-in {
-    border: 2px solid blue; /* Add a blue border with a 2px width */
+    border: 2px solid maroon; 
     font-size: 12px;
     background: none;
-    margin: 0; /* Remove the default margin */
+    margin: 0; 
     padding: 1.5%; 
-    width: 16.66%; /* Divide the container into 6 equal parts for 6 buttons */
-    text-align: center; /* Center button text */
+    width: 16.66%; 
+    text-align: center; 
 }
 
 #button-container {
-    border: 2px solid blue;
+    border: 2px solid maroon;
     padding: 0;
     width: 90%;
 }
@@ -44,7 +50,7 @@ header #main-title {
 #hamburger div {
     width: 35px;
     height: 5px;
-    background-color: black;
+    background-color: maroon;
     margin: 6px 0;
 }
 
@@ -57,7 +63,7 @@ header #main-title {
 }
 
 #button-log-in{
-    background-color: blue;
+    background-color: maroon;
     color: white;
 }
 
