--- a/projects/part2/tickets.css
+++ b/projects/part2/tickets.css
@@ -3,16 +3,19 @@
 body {
     background-color: white;
     overflow-x: hidden;
+    color: maroon;
 }
 
 header #main-title {
     text-align: center;
-    font-size: 42px; /* Use !important to ensure the font size is applied */
+    font-size: 42px;
+    color: black; 
 }
 
 .columns {
     display: flex;
 }
+
 
 /* Navigation */
 #button-home,
@@ -21,17 +24,17 @@ header #main-title {
 #button-my-tickets,
 #button-game-ratings,
 #button-log-in {
-    border: 2px solid blue; /* Add a blue border with a 2px width */
+    border: 2px solid maroon; 
     font-size: 12px;
     background: none;
-    margin: 0; /* Remove the default margin */
+    margin: 0; 
     padding: 1.5%; 
-    width: 16.66%; /* Divide the container into 6 equal parts for 6 buttons */
-    text-align: center; /* Center button text */
+    width: 16.66%; 
+    text-align: center; 
 }
 
 #button-container {
-    border: 2px solid blue;
+    border: 2px solid maroon;
     padding: 0;
     width: 90%;
 }
@@ -44,7 +47,7 @@ header #main-title {
 #hamburger div {
     width: 35px;
     height: 5px;
-    background-color: black;
+    background-color: maroon;
     margin: 6px 0;
 }
 
@@ -57,7 +60,7 @@ header #main-title {
 }
 
 #button-my-tickets{
-    background-color: blue;
+    background-color: maroon;
     color: white;
 }
 
@@ -67,7 +70,7 @@ header #main-title {
     position: relative;
     width: 90%;
     height: 150px;
-    background-color: grey;
+    background-color: maroon;
     border-radius: 20px;
     text-align: center;
     padding: 20px;
@@ -93,18 +96,22 @@ header #main-title {
     width: 15px;
 }
 
+.first p, .second p{
+    font-size: 24px;
+}
+
 .first, .second, .third, .fourth {
     position: absolute;
     color: white; 
 }
 
 .first {
-    top: 10px; 
+    top: 0px; 
     left: 200px; 
 }
 
 .second {
-    top: 10px; 
+    top: 0px; 
     right: 10px; 
 }
 
